--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "start": "node index.js",
-    "test": "npm install inherits && mocha"
+    "test": "npm install inherits && mocha",
+    "start": "forever start index.js",
+    "stop": "forever stopall"
   },
   "engines": {
     "node": "^4.6.1"
